--- a/DualProjector.tex
+++ b/DualProjector.tex
@@ -22,7 +22,6 @@
 \usepackage{opex3}
 
 \usepackage{amsmath}
-\usepackage{graphicx}
 \usepackage{caption}
 \usepackage{hyperref}
 \usepackage{verbatim}
@@ -52,24 +51,40 @@ Detailed instructions and formatting guidelines for preparing \textit{Optics Exp
 
 %%%%%%%%%%%%%%%%%%%%%%% References %%%%%%%%%%%%%%%%%%%%%%%%%
 \begin{thebibliography}{99}
-
+\bibitem{inde78}G. Indebetouw, ``Profile measurement using projection of running fringes", \ao {\bf 17}, 2930-2933(1978).
+\bibitem{posd82}J. L. Posdamer, and M. D. Altschuler, ``Surface measurement by space-encoded projected beam systems", \cgip {\bf 18}(1), 1-17(1982).
+\bibitem{boyer87}K. L. Boyer, and A. C. Kak, ``Color-encoded structured light for rapid active ranging",  \pami {\bf 9}{1}, 14-28(1987).
+\bibitem{geng11}J. Geng, ``Structured-light 3D surface imaging: a tutorial", \aop {\bf 3}, 128-160(2011).
+\bibitem{deetjen17}M. E. Deetjen, A. A. Biewener, and D. Lentink, ``High-speed surface reconstruction of a flying bird using structured light", \jeb {\bf 220}, 1956-1961(2017).
+\bibitem{zhan12}Z. H. Zhang, ``Review of single-shot 3D shape measurement by phase calculation-based fringe projection techniques", \ole {\bf 50}, 1097-1106(2012).
+\bibitem{srin85}V. Srinivasan, H. C. Liu, and M. Halioua, ``Automated phase measuring profilometry: a phase mapping approach", \ao {\bf 24}, 185-188(1985).
+\bibitem{lieb05}E. B. Li, X. Peng, J. Xi, J. F. Chicharo, J. Q. Yao, and D. W. Zhang, `` Multi-frequency and multiple phase-shift sinusoidal fringe projection for 3D profilometry", \opex {\bf 13}(5), 1561-1569(2005).
+\bibitem{siva10}S. Siva Gorthi, and P. Rastogi, `` Fringe projection techniques: whither we are?", \ole {\bf 48}(2), 133-140(2010).
+\bibitem{zuo16}C. Zuo, L. Huang, M. Zhang, Q. Chen, and A. Asundi, `` Temporal phase unwrapping algorithms for fringe projection profilometry: A comparative review", \ole {\bf 85}, 84-103(2016).
+\bibitem{ding11}Y. Ding, J. Xi, Y. Yu, and J. F. Chicharo, ``Recovering the absolute phase maps of two fringe patterns with selected frequencies", \ol {\bf 36}(13), 2518-2520(2011).
+\bibitem{song18}J. Song, Y. S. Ho, D. L. Lau, and K. Liu, ``Universal phase unwarpping for phase measuring profilometry using geometry analysis", \pspie {\bf 10546}, 0B-0-0B-8(2018).
+\bibitem{guan03}C. Guan, L. G. Hassebrook, and D. L. Lau, `` Composite structured light pattern for three-dimensional video", \opex {\bf 11} (5), 406-417(2003).
+\bibitem{suwh06}W. H. Su, and H. Liu, ``Calibration-based two-frequency projected fringe profilometry: a robust, accurate, and single-shot measurement for objects with large depth discontinuities", \opex {\bf 14}(20), 9178-9187(2006).
+\bibitem{zhan06}S. Zhang, and S. T. Yau, ``High-resolution, real-time 3D absolute coordinate measurement based on a phase-shifting method", \opex {\bf 14}(7), 2644-2649(2006).
 \bibitem{kai10}K.i Liu, Y. Wang, D. L. Lau, Q. Hao, and L. G. Hassebrook, ``Dual-frequency pattern scheme for high-speed 3-D shape measurement,'' \opex {\bf 18}(5), 5229--5244 (2010).
-
+\bibitem{zhan17}G. Zhan, H. Tang, K. Zhong, Z. Li, Y. Shi, and C. Wang, ``High-speed FPGA-based phase measuring profilometry architecture", \opex {\bf 25}(9), 10553-10564(2017).
+\bibitem{otoo16}M. O'Toole, J. Mather, and K. N. Kutulakos, `` 3D shape and indirect appearance by structured light transport", \pami {\bf 38}(7), 1298-1312(2016).
+\bibitem{lin13}J. Lin, K. Jiang, and  M. Chang, `` A novel solution for camera occlusion in stereo vision technique", \ame {\bf 2013}, 1-8(2013).
+\bibitem{zhan08}S. Zhang, and S. T. Yau, ``Three-dimensional shape measurement using a structured light system with dual cameras", \opeg {\bf 47}(1), 013604-1-013604-12(2008).
 \bibitem{jiang18}C. Jiang, B. Lim, and S. Zhang, ``Three-dimensional shape measurement using a structured light system with dual projectors", \ao {\bf 57}(14), 3983-3990(2018).
 
-\bibitem{zhan17}G. Zhan, H. Tang, K. Zhong, Z. Li, Y. Shi, and C. Wang, ``High-speed FPGA-based phase measuring profilometry architecture", \opex {\bf 25}(9), 10553-10564(2017).
-
-\bibitem{guan03}C. Guan, L. G. Hassebrook, and D. L. Lau, `` Composite structured light pattern for three-dimensional video", \opex {\bf 11} (5), 406-417(2003).
 \end{thebibliography} 
+
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%  body  %%%%%%%%%%%%%%%%%%%%%%%%%%
 \section{Introduction}
-It has been several decades since the structured light illumination (SLI) was proposed for the first time. Due to its high resolution and high accuracy, it is still an active research area to which a lot of time and efforts are devoted every year. As people relentlessly tried to develop high speed and high accuracy systems over the years, more and more SLI techniques have been adopted in industry and consumer electronics.\\
-A traditional SLI system consists of one camera, one projector and one image data processing instrument which is usually a personal computer. Thanks to the fast development of computer and electronics industry, SLI systems have been gaining better performance with better cameras, projectors and computers. Meanwhile, in terms of the principle and algorithm of the system, many experimental or practical techniques have been introduced by researchers to achieve high-speed and/or high accuracy 3D reconstruction. The fewer the patterns are projected, the less the data to be processed, hence the faster the 3D measurement can be done. One-shot SLI techniques are well-known for their widely applications on measuring moving objects. However, they are not so promising in terms of resolution and accuracy. One way to acquire both high speed and high resolution is to project a sequence with the least number of fringe patterns. Besides the unit frequency patterns that are essential for 3D reconstruction,  high frequency patterns are often added to reduce the effect of noise at unit frequency and increase the resolution, although these high frequency patterns will in turn give rise to some additional phase unwrapping computation in the processing unit. Guan \cite{guan03} and Liu \cite{kai10}proposed two different schemes to combine one unit frequency and one high frequency patterns into one composite pattern. With half number of the patterns to be projected, the speed of 3D measurement increased without lowering the resolution. In \cite{Zhan17}, Zhan took advantage of the parallelism and pipeline structure of FPGA, and conducted all the image data processing in an FPGA board instead of a normal personal computer.The speed was reportedly increased by more than 100 times comparing to CPU-based data processing. But the accuracy would go the opposite. Because there are limited resources of floating point units inside FPGA,  and the low capabilities of conducting complicated calculations force the FPGA to process the phase to depth value conversions in a simple algorithm instead of an accurate one.
+As one of the most popular approaches of 3D measurement,  structured light illumination (SLI) has its roots back in over thirty years ago \cite {inde78, posd82, boyer87}. SLI techniques start by projecting one or multiple encoded patterns to the object, the non-planar surface of the object distorts the projected pattern, after taking images of the object under projection, the surface profile information of the object can be retrieved through some mathematical computations.  Due to its high resolution and high accuracy, it is still an active research area to which a lot of time and efforts are devoted every year. As people kept tring to develop high speed and high accuracy systems over the years, more and more SLI techniques have been adopted in industry and consumer electronics \cite{geng11}.\\
+A traditional SLI system consists of one camera, one projector and one image data processing instrument which is usually a personal computer. Thanks to the fast development of computer and electronics industry, SLI systems have been gaining better performance with better cameras, projectors and computers. Meanwhile, in terms of the principle and algorithm of the system, many experimental or practical techniques have been introduced by researchers to achieve high-speed and/or high accuracy 3D reconstruction. One-shot SLI techniques are well-known for their wide applications on measuring moving objects \cite{deetjen17}. However, they are not so promising in terms of accuracy\cite{zhan12}. One common technique that is used to acquire high resolution is the phase measuring profilometry (PMP) \cite {srin85}. In PMP, a sequence of sinusoidal patterns are projected onto the object, besides the unit frequency patterns that are essential for 3D reconstruction,  high frequency patterns are added to reduce the effect of noise at unit frequency as well as to increase the resolution. Although unwrapping the phases of these high frequency patterns will in turn give rise to some additional computational cost in phase unwrapping, they are found to be quite helpful in dealing with objects that have surface discontinuities \cite{lieb05, siva10}. As a critical step in PMP, temporal phase unwrapping has been intensively studied \cite{zuo16}. In \cite{ding11}, Ding {\etal} reduced the 3D scanning time by unambiguously unwrapping the primary phase map from only one reference phase map of a co-primed reference frequency. Song {\etal} improved Ding's algorithm by  applying a geometric model and an automatically updated look-up table to the system \cite{song18}.\\
+In order to gain high speed, Guan \cite{guan03}{\etal} and Su \cite{suwh06}{\etal} combined two frequencies into one single-shot pattern, but the resolution is relatively low \cite{zhan06}. Liu \cite{kai10}{\etal}proposed a scheme to combine one unit frequency and one high frequency patterns into one series of phase-shifting patterns. With half number of the patterns to be projected, the speed of 3D measurement increased without lowering the resolution. In \cite{zhan17}, Zhan {\etal} took advantage of the parallelism and pipeline structure of FPGA, and conducted all the image data processing in an FPGA board instead of a normal personal computer.The speed was reportedly increased by more than 100 times comparing to CPU-based data processing. But the accuracy would go the opposite. Because there are limited resources of floating point units inside FPGA,  and the low capabilities of conducting complicated calculations force the FPGA to process the phase to depth value conversions in a simple algorithm instead of an accurate one.\\
+One challenge that the traditional SLI systems face is the limited view angles of both projector and camera. It is the also the cause of the issues such as multi-path effect \cite{otoo16} and occlusion \cite{lin13} in SLI systems. Related researches have been conducted to address these issues, Zhang {\etal} proposed two schemes by adding either another camera or one extra projector in the system to widen the view angles.
 \\
-In this paper, we propose a dual-projector scheme that equip two projectors at opposite sides of the camera, each projector is fed with fringe patterns of three different frequencies sequentially. Higher frequency patterns are used to increase the accuracy of the measurement, accordingly they are later unwrapped by the unit frequency pattern at the expense of some extra computation for the processing instrument. Both projectors are synchronized with the camera by an FPGA-based circuit, the patterns projected by them are of same frequency but different phase. By projecting light to the objects from two different angles, the issues like shadow effect and multi-path effect which used to undermine the overall performance of the 3D measurements can be addressed.\\
-
-In order to further reduce the time of calibration and scan, we manage to make both projectors work at 120Hz. Also we build a look up table during calibration process, it provides us a one-to-one correspondence between the phase and the depth values of the 3D point clouds. The elimination of computation-intensive processing during target scan allows us to envision the potential of real-time 3D measurement.
+In this paper, we propose a novel dual-projector scheme that equips two projectors at opposite sides of the camera, each projector is fed with PMP patterns of three different frequencies sequentially. Inspired by Liu {\etal}, higher frequency patterns are used to increase the accuracy of the measurement, accordingly they are later unwrapped by the unit frequency pattern. Both projectors are synchronized with the camera by an FPGA-based circuit, the patterns projected by them are of the same frequency but different phases. By projecting light to the objects from two different angles, the issues like occlusion and multi-path effect which used to undermine the overall performance of the 3D measurements can be addressed.\\
+In order to further reduce the time of calibration and scanning, we manage to make both projectors work at 120Hz. Also we build a look-up table during calibration process, it provides us a one-to-one correspondence between the phase and the depth values of the 3D point clouds. The elimination of computation-intensive processing during target scan allows us to envision the potential of real-time 3D measurement.
 
 Our experimental system includes a Basler camera, an Optoma ML750 projector and a computer with Intel Core i7 quad-core processor.
 %Standard \LaTeX{} or AMS\TeX{} environments should be used to place tables, figures, and math. Examples are given below.
