--- a/opex3.sty
+++ b/opex3.sty
@@ -157,6 +157,10 @@
 \let\endOEReflinks\endthebibliography
 \let\endReferences\endthebibliography
 
+\newcommand{\etal}{\textit{et al}. }
+\newcommand{\ie}{\textit{i}.\textit{e}., }
+\newcommand{\eg}{\textit{e}.\textit{g}. }
+
 %% New section parameters 4/28/2003 sdinee
 %% Authors may now use \cite \ref for section numbers
 
@@ -286,4 +290,12 @@
 \def\assl{ {\it Advanced Solid State Lasers }}
 \def\tops{ Trends in Optics and Photonics }
 
+
+\def\ole{Opt.\ Lasers Eng.\ }
+\def\jeb{J.\ Expe.\ Biology }
+\def\cgip{Comput.\ Graph.\ Image Processing }
+\def\pami{IEEE Trans.\ Pattern Anal.\ Mach.\ Intell.\ }
+\def\jra{IEEE J.\ Robot.\ Automat.\ }
+\def\ame{Adv.\ Mech.\ Eng.\ }
+\def\opeg{Opt.\ Eng.\ }
 %% end opex3.sty
