--- a/DualProjector.tex
+++ b/DualProjector.tex
@@ -50,45 +50,45 @@ Detailed instructions and formatting guidelines for preparing \textit{Optics Exp
 \ocis{(000.0000) General.} % REPLACE WITH CORRECT OCIS CODES FOR YOUR ARTICLE, MINIMUM OF TWO; Avoid using the OCIS codes for “General” or “General science” whenever possible.
 
 %%%%%%%%%%%%%%%%%%%%%%% References %%%%%%%%%%%%%%%%%%%%%%%%%
-\begin{thebibliography}{99}
-\bibitem{inde78}G. Indebetouw, ``Profile measurement using projection of running fringes", \ao {\bf 17}, 2930-2933(1978).
-\bibitem{posd82}J. L. Posdamer, and M. D. Altschuler, ``Surface measurement by space-encoded projected beam systems", \cgip {\bf 18}(1), 1-17(1982).
-\bibitem{boyer87}K. L. Boyer, and A. C. Kak, ``Color-encoded structured light for rapid active ranging",  \pami {\bf 9}{1}, 14-28(1987).
-\bibitem{geng11}J. Geng, ``Structured-light 3D surface imaging: a tutorial", \aop {\bf 3}, 128-160(2011).
-\bibitem{deetjen17}M. E. Deetjen, A. A. Biewener, and D. Lentink, ``High-speed surface reconstruction of a flying bird using structured light", \jeb {\bf 220}, 1956-1961(2017).
-\bibitem{zhan12}Z. H. Zhang, ``Review of single-shot 3D shape measurement by phase calculation-based fringe projection techniques", \ole {\bf 50}, 1097-1106(2012).
-\bibitem{srin85}V. Srinivasan, H. C. Liu, and M. Halioua, ``Automated phase measuring profilometry: a phase mapping approach", \ao {\bf 24}, 185-188(1985).
-\bibitem{lieb05}E. B. Li, X. Peng, J. Xi, J. F. Chicharo, J. Q. Yao, and D. W. Zhang, `` Multi-frequency and multiple phase-shift sinusoidal fringe projection for 3D profilometry", \opex {\bf 13}(5), 1561-1569(2005).
-\bibitem{siva10}S. Siva Gorthi, and P. Rastogi, `` Fringe projection techniques: whither we are?", \ole {\bf 48}(2), 133-140(2010).
-\bibitem{zuo16}C. Zuo, L. Huang, M. Zhang, Q. Chen, and A. Asundi, `` Temporal phase unwrapping algorithms for fringe projection profilometry: A comparative review", \ole {\bf 85}, 84-103(2016).
-\bibitem{ding11}Y. Ding, J. Xi, Y. Yu, and J. F. Chicharo, ``Recovering the absolute phase maps of two fringe patterns with selected frequencies", \ol {\bf 36}(13), 2518-2520(2011).
-\bibitem{song18}J. Song, Y. S. Ho, D. L. Lau, and K. Liu, ``Universal phase unwarpping for phase measuring profilometry using geometry analysis", \pspie {\bf 10546}, 0B-0-0B-8(2018).
-\bibitem{guan03}C. Guan, L. G. Hassebrook, and D. L. Lau, `` Composite structured light pattern for three-dimensional video", \opex {\bf 11} (5), 406-417(2003).
-\bibitem{suwh06}W. H. Su, and H. Liu, ``Calibration-based two-frequency projected fringe profilometry: a robust, accurate, and single-shot measurement for objects with large depth discontinuities", \opex {\bf 14}(20), 9178-9187(2006).
-\bibitem{zhan06}S. Zhang, and S. T. Yau, ``High-resolution, real-time 3D absolute coordinate measurement based on a phase-shifting method", \opex {\bf 14}(7), 2644-2649(2006).
-\bibitem{kai10}K.i Liu, Y. Wang, D. L. Lau, Q. Hao, and L. G. Hassebrook, ``Dual-frequency pattern scheme for high-speed 3-D shape measurement,'' \opex {\bf 18}(5), 5229--5244 (2010).
-\bibitem{zhan17}G. Zhan, H. Tang, K. Zhong, Z. Li, Y. Shi, and C. Wang, ``High-speed FPGA-based phase measuring profilometry architecture", \opex {\bf 25}(9), 10553-10564(2017).
-\bibitem{otoo16}M. O'Toole, J. Mather, and K. N. Kutulakos, `` 3D shape and indirect appearance by structured light transport", \pami {\bf 38}(7), 1298-1312(2016).
-\bibitem{lin13}J. Lin, K. Jiang, and  M. Chang, `` A novel solution for camera occlusion in stereo vision technique", \ame {\bf 2013}, 1-8(2013).
-\bibitem{zhan08}S. Zhang, and S. T. Yau, ``Three-dimensional shape measurement using a structured light system with dual cameras", \opeg {\bf 47}(1), 013604-1-013604-12(2008).
-\bibitem{jiang18}C. Jiang, B. Lim, and S. Zhang, ``Three-dimensional shape measurement using a structured light system with dual projectors", \ao {\bf 57}(14), 3983-3990(2018).
-
-\end{thebibliography} 
+%\begin{thebibliography}{99}
+%\bibitem{inde78}G. Indebetouw, ``Profile measurement using projection of running fringes", \ao {\bf 17}, 2930-2933(1978).
+%\bibitem{posd82}J. L. Posdamer, and M. D. Altschuler, ``Surface measurement by space-encoded projected beam systems", \cgip {\bf 18}(1), 1-17(1982).
+%\bibitem{boyer87}K. L. Boyer, and A. C. Kak, ``Color-encoded structured light for rapid active ranging",  \pami {\bf 9}{1}, 14-28(1987).
+%\bibitem{geng11}J. Geng, ``Structured-light 3D surface imaging: a tutorial", \aop {\bf 3}, 128-160(2011).
+%\bibitem{deetjen17}M. E. Deetjen, A. A. Biewener, and D. Lentink, ``High-speed surface reconstruction of a flying bird using structured light", \jeb {\bf 220}, 1956-1961(2017).
+%\bibitem{zhan12}Z. H. Zhang, ``Review of single-shot 3D shape measurement by phase calculation-based fringe projection techniques", \ole {\bf 50}, 1097-1106(2012).
+%\bibitem{srin85}V. Srinivasan, H. C. Liu, and M. Halioua, ``Automated phase measuring profilometry: a phase mapping approach", \ao {\bf 24}, 185-188(1985).
+%\bibitem{lieb05}E. B. Li, X. Peng, J. Xi, J. F. Chicharo, J. Q. Yao, and D. W. Zhang, `` Multi-frequency and multiple phase-shift sinusoidal fringe projection for 3D profilometry", \opex {\bf 13}(5), 1561-1569(2005).
+%\bibitem{siva10}S. Siva Gorthi, and P. Rastogi, `` Fringe projection techniques: whither we are?", \ole {\bf 48}(2), 133-140(2010).
+%\bibitem{zuo16}C. Zuo, L. Huang, M. Zhang, Q. Chen, and A. Asundi, `` Temporal phase unwrapping algorithms for fringe projection profilometry: A comparative review", \ole {\bf 85}, 84-103(2016).
+%\bibitem{ding11}Y. Ding, J. Xi, Y. Yu, and J. F. Chicharo, ``Recovering the absolute phase maps of two fringe patterns with selected frequencies", \ol {\bf 36}(13), 2518-2520(2011).
+%\bibitem{song18}J. Song, Y. S. Ho, D. L. Lau, and K. Liu, ``Universal phase unwarpping for phase measuring profilometry using geometry analysis", \pspie {\bf 10546}, 0B-0-0B-8(2018).
+%\bibitem{guan03}C. Guan, L. G. Hassebrook, and D. L. Lau, `` Composite structured light pattern for three-dimensional video", \opex {\bf 11} (5), 406-417(2003).
+%\bibitem{suwh06}W. H. Su, and H. Liu, ``Calibration-based two-frequency projected fringe profilometry: a robust, accurate, and single-shot measurement for objects with large depth discontinuities", \opex {\bf 14}(20), 9178-9187(2006).
+%\bibitem{zhan06}S. Zhang, and S. T. Yau, ``High-resolution, real-time 3D absolute coordinate measurement based on a phase-shifting method", \opex {\bf 14}(7), 2644-2649(2006).
+%\bibitem{kai10}K.i Liu, Y. Wang, D. L. Lau, Q. Hao, and L. G. Hassebrook, ``Dual-frequency pattern scheme for high-speed 3-D shape measurement,'' \opex {\bf 18}(5), 5229--5244 (2010).
+%\bibitem{zhan17}G. Zhan, H. Tang, K. Zhong, Z. Li, Y. Shi, and C. Wang, ``High-speed FPGA-based phase measuring profilometry architecture", \opex {\bf 25}(9), 10553-10564(2017).
+%\bibitem{otoo16}M. O'Toole, J. Mather, and K. N. Kutulakos, `` 3D shape and indirect appearance by structured light transport", \pami {\bf 38}(7), 1298-1312(2016).
+%\bibitem{lin13}J. Lin, K. Jiang, and  M. Chang, `` A novel solution for camera occlusion in stereo vision technique", \ame {\bf 2013}, 1-8(2013).
+%\bibitem{zhan08}S. Zhang, and S. T. Yau, ``Three-dimensional shape measurement using a structured light system with dual cameras", \opeg {\bf 47}(1), 013604-1-013604-12(2008).
+%\bibitem{jiang18}C. Jiang, B. Lim, and S. Zhang, ``Three-dimensional shape measurement using a structured light system with dual projectors", \ao {\bf 57}(14), 3983-3990(2018).
+%
+%\end{thebibliography} 
 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%  body  %%%%%%%%%%%%%%%%%%%%%%%%%%
 \section{Introduction}
-Structured light illumination (SLI) is a means of 3D scanning based on projecting a series of striped or structured patterns onto a target and then reconstructing a 3D model based on the warping of the stripes as measured by a camera~\cite{inde78, posd82, boyer87}.  A traditional SLI system consists of one camera, one projector and one image data processing instrument which is usually a personal computer~\cite{??}. Thanks to the fast development of computer and electronics industry, SLI systems have been gaining better performance with better cameras~\cite{??}, projectors~\cite{??}, and computers~\cite{zhan17}. Meanwhile, in terms of the principle and algorithm of the system, many experimental or practical techniques have been introduced by researchers to achieve high-speed and/or high accuracy 3D reconstruction~\cite{??}. 
+%As one of the most popular approaches of 3D measurement,  structured light illumination (SLI) has its roots back in over thirty years ago \cite {inde78, posd82, boyer87}. SLI techniques start by projecting one or multiple encoded patterns to the object, the non-planar surface of the object distorts the projected pattern, after taking images of the object under projection, the surface profile information of the object can be retrieved through some mathematical computations.  Due to its high resolution and high accuracy, it is still an active research area to which a lot of time and efforts are devoted every year. As people kept tring to develop high speed and high accuracy systems over the years, more and more SLI techniques have been adopted in industry and consumer electronics \cite{geng11}.
+Structured light illumination (SLI) is a means of 3D scanning based on projecting a series of striped or structured patterns onto a target and then reconstructing a 3D model based on the warping of the stripes as measured by a camera~\cite{inde78, posd82, boye87}.  A traditional SLI system consists of one camera, one projector and one image data processing instrument which is usually a personal computer~\cite{gort10}. Thanks to the fast development of computer and electronics industry, SLI systems have been gaining better performance with faster hardwares~\cite{gong10, zhan17}. Meanwhile, in terms of the principle and algorithm of the system, many experimental or practical techniques have been introduced by researchers to achieve high-speed and/or high accuracy 3D reconstruction~\cite{zhan17, zhan06}. In order to gain high speed, Guan {\etal}~\cite{guan03} and Su~\cite{suwh06} {\etal} combined two frequencies into one single-shot pattern, but the resolution is relatively low \cite{zhang06}. Liu {\etal}~\cite{liuk10} proposed a scheme to combine one unit frequency and one high frequency patterns into one series of phase-shifting patterns. With half the number of the patterns to be projected, the speed of 3D measurement increased without lowering the resolution.\\
 
-One-shot SLI techniques are well-known for their wide applications on measuring moving objects \cite{deetjen17}. However, they are not so promising in terms of accuracy~\cite{zhan12}. One common technique that is used to acquire high resolution is Phase Measuring Profilometry (PMP)~\cite{srin85}. In PMP, a sequence of sinusoidal patterns are projected onto the object.  Besides the unit frequency patterns that are essential for 3D reconstruction, high frequency patterns are added to reduce the effect of noise at unit frequency as well as to increase the resolution~\cite{??}. Although unwrapping the phases of these high frequency patterns will in turn give rise to some additional computational cost in phase unwrapping, they are found to be quite helpful in dealing with objects that have surface discontinuities~\cite{lieb05, siva10}. 
-
-As a critical step in PMP, temporal phase unwrapping has been intensively studied~\cite{zuo16}. In~\cite{ding11}, Ding {\etal} reduced the 3D scanning time by unambiguously unwrapping the primary phase map from only one reference phase map of a co-primed reference frequency. Song {\etal} improved Ding's algorithm by applying a geometric model and an automatically updated look-up table to the system~\cite{song18}. In order to gain high speed, Guan {\etal}~\cite{guan03} and Su~\cite{suwh06} {\etal} combined two frequencies into one single-shot pattern, but the resolution is relatively low \cite{zhan06}. Liu {\etal}~\cite{kai10} proposed a scheme to combine one unit frequency and one high frequency patterns into one series of phase-shifting patterns. With half number of the patterns to be projected, the speed of 3D measurement increased without lowering the resolution.
+One-shot SLI techniques are well-known for their wide applications on measuring moving objects \cite{deet17}. However, they are not so promising in terms of accuracy~\cite{zhan12}. One common technique that has been used to acquire high resolution is Phase Measuring Profilometry (PMP)~\cite{srin85}, where a sequence of sinusoidal patterns are projected onto the object.  Besides the unit frequency patterns that are essential for 3D reconstruction, high frequency patterns are added to reduce the effect of noise at unit frequency as well as to increase the resolution~\cite{lijl03}, although unwrapping the phases of these high frequency patterns in turn gives rise to some additional computational cost in phase unwrapping. 
+As a critical step in PMP, temporal phase unwrapping has been intensively studied~\cite{zuoc16}. Unlike the spatial phase unwrapping which compares with the neibouring pixels, the temporal phase unwrapping looks at the phase of each pixel along the time axies, it uses the phase differences among different patterns to derive the absolute phase of a pixel \cite{liuy12}. The main attractive feature of teporal phase unwrapping is its capability of reconstructing 3D objects with surface discontinuities \cite{hunt93}.  In~\cite{ding11}, Ding {\etal} reduced the 3D scanning time by unambiguously unwrapping the primary phase map from only one reference phase map of a co-primed reference frequency. Song {\etal} improved Ding's algorithm by applying a geometric model and an automatically updated look-up table to the system~\cite{song18}. 
 
 %In~\cite{zhan17}, Zhan {\etal} took advantage of the parallelism and pipeline structure of FPGA, and conducted all the image data processing in an FPGA board instead of a normal personal computer.The speed was reportedly increased by more than 100 times comparing to CPU-based data processing. But the accuracy would go the opposite. Because there are limited resources of floating point units inside FPGA,  and the low capabilities of conducting complicated calculations force the FPGA to process the phase to depth value conversions in a simple algorithm instead of an accurate one.
 
-One challenge that the traditional SLI systems face is the limited view angles of both projector and camera. It is the also the cause of the issues such as multi-path effect \cite{otoo16} and occlusion \cite{lin13} in SLI systems. Related researches have been conducted to address these issues, Zhang {\etal} proposed two schemes by adding either another camera or one extra projector in the system to widen the view angles.
+One challenge that the traditional SLI systems face is the limited view angles of both projector and camera. It is also the cause of the issues such as multi-path effect \cite{otoo16} and occlusion \cite{linj13} in SLI systems. Related researches have been conducted to address these issues, Zhang {\etal} proposed two schemes by adding either another camera or one extra projector in the system to widen the view angles \cite{zhan08, jian18}.
 
-In this paper, we propose a novel dual-projector scheme that equips two projectors at opposite sides of the camera, each projector is fed with PMP patterns of three different frequencies sequentially. Inspired by Liu {\etal}, higher frequency patterns are used to increase the accuracy of the measurement, accordingly they are later unwrapped by the unit frequency pattern. Both projectors are synchronized with the camera by an FPGA-based circuit, the patterns projected by them are of the same frequency but different phases. By projecting light to the objects from two different angles, the issues like occlusion and multi-path effect which used to undermine the overall performance of the 3D measurements can be addressed.
+In this paper, we propose a novel dual-projector scheme that places two projectors at opposite sides of the camera. Differing from Zhang's scheme in which two projectors work indepently and the discussion focuses on the approach of combining the images of the object under projections from different angles, in our system, two projectors are fed with different PMP patterns. Inspired by Liu {\etal}, higher frequency patterns are used to increase the accuracy of the measurement, accordingly they are later unwrapped by the unit frequency pattern. Both projectors are synchronized with the camera by an FPGA-based circuit, the patterns projected by them are of the same frequency but different phases. By projecting light to the objects from two different angles, the issues like occlusion and multi-path effect which used to undermine the overall performance of the 3D measurements can be addressed.
 
 In order to further reduce the time of calibration and scanning, we manage to make both projectors work at 120Hz. Also we build a look-up table during calibration process, it provides us a one-to-one correspondence between the phase and the depth values of the 3D point clouds. The elimination of computation-intensive processing during target scan allows us to envision the potential of real-time 3D measurement.
 
@@ -107,7 +107,8 @@ Our experimental system includes a Basler camera, an Optoma ML750 projector and 
 %\end{equation}
 %\end{verbatim}
 
-\section{Conclusion}
+%\section{Conclusion}
 %After proofreading the manuscript, compress your .TEX manuscript file and all figures (which should be in EPS format, or PDF format if you are using PDF-\LaTeX) in a ZIP, TAR or TAR-GZIP package. Prism, OSA’s article tracking system, will process in \LaTeX mode by default but will use PDF-\LaTeX if PDF figure files are detected. Note: TAR or TAR-%GZIP is no longer required. All files must be referenced at the root level (e.g., file \texttt{figure-1.eps}, not \texttt{/myfigs/figure-1.eps}). If there is video or other multimedia, the associated files should be uploaded separately.
-
+\bibliography{references}
+\bibliographystyle{osajnl}
 \end{document}
