--- a/DualProjector.tex
+++ b/DualProjector.tex
@@ -79,20 +79,23 @@ Detailed instructions and formatting guidelines for preparing \textit{Optics Exp
 %%%%%%%%%%%%%%%%%%%%%%%%%%  body  %%%%%%%%%%%%%%%%%%%%%%%%%%
 \section{Introduction}
 %As one of the most popular approaches of 3D measurement,  structured light illumination (SLI) has its roots back in over thirty years ago \cite {inde78, posd82, boyer87}. SLI techniques start by projecting one or multiple encoded patterns to the object, the non-planar surface of the object distorts the projected pattern, after taking images of the object under projection, the surface profile information of the object can be retrieved through some mathematical computations.  Due to its high resolution and high accuracy, it is still an active research area to which a lot of time and efforts are devoted every year. As people kept tring to develop high speed and high accuracy systems over the years, more and more SLI techniques have been adopted in industry and consumer electronics \cite{geng11}.
-Structured light illumination (SLI) is a means of 3D scanning based on projecting a series of striped or structured patterns onto a target and then reconstructing a 3D model based on the warping of the stripes as measured by a camera~\cite{inde78, posd82, boye87}.  A traditional SLI system consists of one camera, one projector and one image data processing instrument which is usually a personal computer~\cite{gort10}. Thanks to the fast development of computer and electronics industry, SLI systems have been gaining better performance with faster hardwares~\cite{gong10, zhan17}. Meanwhile, in terms of the principle and algorithm of the system, many experimental or practical techniques have been introduced by researchers to achieve high-speed and/or high accuracy 3D reconstruction~\cite{zhan17, zhan06}. In order to gain high speed, Guan {\etal}~\cite{guan03} and Su~\cite{suwh06} {\etal} combined two frequencies into one single-shot pattern, but the resolution is relatively low \cite{zhang06}. Liu {\etal}~\cite{liuk10} proposed a scheme to combine one unit frequency and one high frequency patterns into one series of phase-shifting patterns. With half the number of the patterns to be projected, the speed of 3D measurement increased without lowering the resolution.\\
+Structured light illumination (SLI) is a means of 3D scanning based on projecting a series of striped or structured patterns onto a target and then reconstructing a 3D model based on the warping of the stripes as measured by a camera~\cite{inde78, posd82, boye87}.  A traditional SLI system consists of one camera, one projector and one image data processing instrument which is usually a personal computer~\cite{gort10}. Thanks to the fast development of computer and electronics industry, SLI systems have been gaining better performance with faster hardwares~\cite{gong10, zhan17}. Meanwhile, in terms of the principle and algorithm of the system, many experimental or practical techniques have been introduced by researchers to achieve high-speed and/or high accuracy 3D reconstruction~\cite{zhan17, zhan06}. 
+
+In order to gain high speed, Guan {\etal}~\cite{guan03} and Su~\cite{suwh06} {\etal} combined two frequencies into one single-shot pattern, but the resolution is relatively low \cite{zhang06}. Liu {\etal}~\cite{liuk10} proposed a scheme to combine one unit frequency and one high frequency patterns into one series of phase-shifting patterns. With half the number of the patterns to be projected, the speed of 3D measurement increased without lowering the resolution.
 
 One-shot SLI techniques are well-known for their wide applications on measuring moving objects \cite{deet17}. However, they are not so promising in terms of accuracy~\cite{zhan12}. One common technique that has been used to acquire high resolution is Phase Measuring Profilometry (PMP)~\cite{srin85}, where a sequence of sinusoidal patterns are projected onto the object.  Besides the unit frequency patterns that are essential for 3D reconstruction, high frequency patterns are added to reduce the effect of noise at unit frequency as well as to increase the resolution~\cite{lijl03}, although unwrapping the phases of these high frequency patterns in turn gives rise to some additional computational cost in phase unwrapping. 
+
 As a critical step in PMP, temporal phase unwrapping has been intensively studied~\cite{zuoc16}. Unlike the spatial phase unwrapping which compares with the neibouring pixels, the temporal phase unwrapping looks at the phase of each pixel along the time axies, it uses the phase differences among different patterns to derive the absolute phase of a pixel \cite{liuy12}. The main attractive feature of teporal phase unwrapping is its capability of reconstructing 3D objects with surface discontinuities \cite{hunt93}.  In~\cite{ding11}, Ding {\etal} reduced the 3D scanning time by unambiguously unwrapping the primary phase map from only one reference phase map of a co-primed reference frequency. Song {\etal} improved Ding's algorithm by applying a geometric model and an automatically updated look-up table to the system~\cite{song18}. 
 
 %In~\cite{zhan17}, Zhan {\etal} took advantage of the parallelism and pipeline structure of FPGA, and conducted all the image data processing in an FPGA board instead of a normal personal computer.The speed was reportedly increased by more than 100 times comparing to CPU-based data processing. But the accuracy would go the opposite. Because there are limited resources of floating point units inside FPGA,  and the low capabilities of conducting complicated calculations force the FPGA to process the phase to depth value conversions in a simple algorithm instead of an accurate one.
 
 One challenge that the traditional SLI systems face is the limited view angles of both projector and camera. It is also the cause of the issues such as multi-path effect \cite{otoo16} and occlusion \cite{linj13} in SLI systems. Related researches have been conducted to address these issues, Zhang {\etal} proposed two schemes by adding either another camera or one extra projector in the system to widen the view angles \cite{zhan08, jian18}.
 
-In this paper, we propose a novel dual-projector scheme that places two projectors at opposite sides of the camera. Differing from Zhang's scheme in which two projectors work indepently and the discussion focuses on the approach of combining the images of the object under projections from different angles, in our system, two projectors are fed with different PMP patterns. Inspired by Liu {\etal}, higher frequency patterns are used to increase the accuracy of the measurement, accordingly they are later unwrapped by the unit frequency pattern. Both projectors are synchronized with the camera by an FPGA-based circuit, the patterns projected by them are of the same frequency but different phases. By projecting light to the objects from two different angles, the issues like occlusion and multi-path effect which used to undermine the overall performance of the 3D measurements can be addressed.
+In this paper, we propose a novel dual-projector scheme that places two projectors at opposite sides of the camera. Differing from Zhang's scheme in which two projectors work indepently and the discussion focuses on the approach of combining the images of the object under projections from different angles, in our system, two projectors are fed with different PMP patterns. Inspired by Liu {\etal}, higher frequency patterns are used to increase the accuracy of the measurement, accordingly they are later unwrapped by the unit frequency pattern. Both projectors are synchronized with the camera by an FPGA-based circuit, the patterns projected by them are of the same frequency but different phases. 
 
-In order to further reduce the time of calibration and scanning, we manage to make both projectors work at 120Hz. Also we build a look-up table during calibration process, it provides us a one-to-one correspondence between the phase and the depth values of the 3D point clouds. The elimination of computation-intensive processing during target scan allows us to envision the potential of real-time 3D measurement.
+By projecting light to the objects from two different angles, the issues like occlusion and multi-path effect which used to undermine the overall performance of the 3D measurements can be addressed. In order to further reduce the time of calibration and scanning, we manage to make both projectors work at 120~Hz. Also we build a look-up table during calibration process, it provides us a one-to-one correspondence between the phase and the depth values of the 3D point clouds. The elimination of computation-intensive processing during target scan allows us to envision the potential of real-time 3D measurement.
 
-Our experimental system includes a Basler camera, an Optoma ML750 projector and a computer with Intel Core i7 quad-core processor.
+%Our experimental system includes a Basler camera, an Optoma ML750 projector and a computer with Intel Core i7 quad-core processor.
 %Standard \LaTeX{} or AMS\TeX{} environments should be used to place tables, figures, and math. Examples are given below.
 
 %\begin{verbatim}
